# garmin-cycling

./: .env.example  .gitignore  Makefile  README.md  app.py  env.sample  main.py  pyproject.toml  script.py  vercel.json
.codegraph/: daemon.pid
cli/: __init__.py  commands.py  parser.py  reporting.py
garmin/: __init__.py  _base.py  _fit.py  _utils.py  activities.py  analytics.py  badges.py  client.py  config.py  gear.py  laps.py  power.py  sync.py  training_load.py  vo2.py  weight.py  workflow.py  zones.py
garmin_lite/: client.py  config.py  laps.py  sync.py  vo2.py  workflow.py
garminconnect/: README.md  __init__.py
openspec/changes/add-hr-zones/: design.md  proposal.md  tasks.md
openspec/changes/add-hr-zones/specs/hr-zones/: spec.md
openspec/changes/add-training-load-readiness/: design.md  proposal.md  tasks.md
openspec/changes/add-training-load-readiness/specs/training-load/: spec.md
openspec/changes/add-training-load-readiness/specs/training-readiness/: spec.md
tests/: test_badges.py  test_config.py  test_fit.py  test_gear.py  test_laps.py  test_power.py  test_reporting.py  test_training_load.py  test_utils.py  test_zones.py
