[project]
name = "garmin-cycling"
version = "0.1.0"
description = "Garmin Connect utilities: cycling analysis, CN->Global sync, VO2max, lake lap counting."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "curl-cffi>=0.15.0",
    # Pin garth to 0.6.3: it uses the classic web-SSO login flow
    # (sso.{domain}/sso) which works for garmin.cn. garth >=0.7 switched to a
    # mobile-API flow (mobile.integration.garmin.com/gcm/android) that fails
    # with 429 / SSL EOF errors for the CN region.
    "garth==0.6.3",
    "fitparse",
    "numpy",
    "pandas",
    "matplotlib",
    "fastapi>=0.115.0",
    "uvicorn",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
# I  = import sorting (previously the only check, via the Makefile)
# E/W= pycodestyle, F = pyflakes, UP = pyupgrade,
# B  = flake8-bugbear, BLE = flake8-blind-except (matches the `# noqa: BLE001`s)
select = ["E", "W", "F", "I", "UP", "B", "BLE"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
